--- a/index.html
+++ b/index.html
@@ -1,32 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Boxes</title>
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Grid-X Layout with CSS Example</title>
+  
+  <link rel="stylesheet" href="css/app.css">
+  
+  <link rel="stylesheet" href="css/foundation.css">
 </head>
 <body>
 
-    <div class="box1">
-        <h1>Box 1</h1>
-        <p>Here we go </p>
+  <div class="grid-x grid-padding-x">
+   
+    <div class="cell large-12 medium-12 small-12 bigbox-1">
+      <p>This is a 12 column cell on all screen sizes (large, medium, small).</p>
     </div>
 
-    <div class="box2">
-        <h1>Box 2</h1>
-        <p> Here we go</p>
+   
+    <div class="cell large-8 medium-8 small-12 bigbox-2">
+      <p>This is an 8 column cell on large and medium screens, and 12 columns on small screens.</p>
+    </div>
+    <div class="cell large-4 medium-4 small-12 bigbox-3">
+      <p>This is a 4 column cell on large and medium screens, and 12 columns on small screens.</p>
     </div>
 
-    <div class="box3">
-        <h1>Box 3</h1>
-        <p>Here we go </p>
+   
+    <div class="cell large-6 medium-6 small-12 bigbox-4">
+      <p>This is a 6 column cell on large and medium screens, and 12 columns on small screens.</p>
+    </div>
+    <div class="cell large-6 medium-6 small-12 bigbox-5">
+      <p>This is a 6 column cell on large and medium screens, and 12 columns on small screens.</p>
     </div>
 
-    <div class="box4">
-        <h1>Box 4</h1>
-        <p>Here we go</p>
+    
+    <div class="cell large-4 medium-4 small-12 bigbox-6">
+      <p>This is a 4 column cell on large and medium screens, and 12 columns on small screens.</p>
     </div>
+    <div class="cell large-4 medium-4 small-12 bigbox-1">
+      <p>This is a 4 column cell on large and medium screens, and 12 columns on small screens.</p>
+    </div>
+    <div class="cell large-4 medium-4 small-12 bigbox-2">
+      <p>This is a 4 column cell on large and medium screens, and 12 columns on small screens.</p>
+    </div>
+
+    
+    <div class="cell large-3 medium-6 small-12 bigbox-3">
+      <p>This is a 3 column cell on large screens, 6 columns on medium screens, and 12 columns on small screens.</p>
+    </div>
+    <div class="cell large-3 medium-6 small-12 bigbox-4">
+      <p>This is a 3 column cell on large screens, 6 columns on medium screens, and 12 columns on small screens.</p>
+    </div>
+    <div class="cell large-3 medium-6 small-12 bigbox-5">
+      <p>This is a 3 column cell on large screens, 6 columns on medium screens, and 12 columns on small screens.</p>
+    </div>
+    <div class="cell large-3 medium-6 small-12 bigbox-6">
+      <p>This is a 3 column cell on large screens, 6 columns on medium screens, and 12 columns on small screens.</p>
+    </div>
+
+   
+    <div class="cell large-3 medium-4 small-12 bigbox-1">
+      <p>This is a 3 column cell on large screens, 4 columns on medium screens, and 12 columns on small screens.</p>
+    </div>
+    <div class="cell large-3 medium-4 small-12 bigbox-2">
+      <p>This is a 3 column cell on large screens, 4 columns on medium screens, and 12 columns on small screens.</p>
+    </div>
+    <div class="cell large-2 medium-4 small-12 bigbox-3">
+      <p>This is a 2 column cell on large screens, 4 columns on medium screens, and 12 columns on small screens.</p>
+    </div>
+    <div class="cell large-2 medium-4 small-12 bigbox-4">
+      <p>This is a 2 column cell on large screens, 4 columns on medium screens, and 12 columns on small screens.</p>
+    </div>
+    <div class="cell large-2 medium-4 small-12 bigbox-5">
+      <p>This is a 2 column cell on large screens, 4 columns on medium screens, and 12 columns on small screens.</p>
+    </div>
+  </div>
 
 </body>
 </html>
