--- a/index.html
+++ b/index.html
@@ -1,80 +1,94 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html class="no-js" lang="en" dir="ltr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Grid-X Layout with CSS Example</title>
-  
-  <link rel="stylesheet" href="css/app.css">
-  
-  <link rel="stylesheet" href="css/foundation.css">
+<meta charset="utf-8">
+<meta http-equiv="x-ua-compatible" content="ie=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Headline Headline Headline | The National Herald</title>
+<link rel="stylesheet" href="css/foundation.css">
+<link rel="stylesheet" href="css/app.css">
+
+
+<!-- FILL OUT META TAGS! -->
+<meta name="description" content="">
+<meta name="author" content="The National Herald">
+
+<!--TWITTER SUMMARY CARD-->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Headline Headline Headline">
+
+<!--OPEN GRAPH CARD-->
+<meta property="og:title" content="Headline Headline Headline">
+<meta property="og:site_name" content="The National Herald">
+<meta property="og:url" content="TBD">
+<meta property="og:description" content="Lead Graph Goes Here.">
+<meta property="og:type" content="website">
+<meta property="og:image" content="TBD">
+
 </head>
 <body>
 
-  <div class="grid-x grid-padding-x">
-   
-    <div class="cell large-12 medium-12 small-12 bigbox-1">
-      <p>This is a 12 column cell on all screen sizes (large, medium, small).</p>
-    </div>
+<!-- RETURN TO TOP -->
+<a name="top"></a>
+<!-- END RETURN TO TOP -->
 
-   
-    <div class="cell large-8 medium-8 small-12 bigbox-2">
-      <p>This is an 8 column cell on large and medium screens, and 12 columns on small screens.</p>
-    </div>
-    <div class="cell large-4 medium-4 small-12 bigbox-3">
-      <p>This is a 4 column cell on large and medium screens, and 12 columns on small screens.</p>
-    </div>
+<!-- SITE BRANDING -->
+<div class="grid-container">
+<div class="grid-x grid-padding-x">
+<div class="large-12 cell">
 
-   
-    <div class="cell large-6 medium-6 small-12 bigbox-4">
-      <p>This is a 6 column cell on large and medium screens, and 12 columns on small screens.</p>
-    </div>
-    <div class="cell large-6 medium-6 small-12 bigbox-5">
-      <p>This is a 6 column cell on large and medium screens, and 12 columns on small screens.</p>
-    </div>
 
-    
-    <div class="cell large-4 medium-4 small-12 bigbox-6">
-      <p>This is a 4 column cell on large and medium screens, and 12 columns on small screens.</p>
-    </div>
-    <div class="cell large-4 medium-4 small-12 bigbox-1">
-      <p>This is a 4 column cell on large and medium screens, and 12 columns on small screens.</p>
-    </div>
-    <div class="cell large-4 medium-4 small-12 bigbox-2">
-      <p>This is a 4 column cell on large and medium screens, and 12 columns on small screens.</p>
-    </div>
+</div>
+</div>
+</div>
+<!-- END SITE BRANDING -->
 
-    
-    <div class="cell large-3 medium-6 small-12 bigbox-3">
-      <p>This is a 3 column cell on large screens, 6 columns on medium screens, and 12 columns on small screens.</p>
-    </div>
-    <div class="cell large-3 medium-6 small-12 bigbox-4">
-      <p>This is a 3 column cell on large screens, 6 columns on medium screens, and 12 columns on small screens.</p>
-    </div>
-    <div class="cell large-3 medium-6 small-12 bigbox-5">
-      <p>This is a 3 column cell on large screens, 6 columns on medium screens, and 12 columns on small screens.</p>
-    </div>
-    <div class="cell large-3 medium-6 small-12 bigbox-6">
-      <p>This is a 3 column cell on large screens, 6 columns on medium screens, and 12 columns on small screens.</p>
-    </div>
+<!-- NAV BAR -->
+<div class="grid-container fluid navStyle">
+<div class="grid-x grid-padding-x">
+<div class="large-12 cell">
+<a href="#" class="navItem">Home</a>
+<a href="#" class="navItem">National</a>
+<a href="#" class="navItem">International</a>
+<a href="#" class="navItem">Local</a>
+<a href="#" class="navItem">Lifestyle</a>
+<a href="#" class="navItem">Sports</a>
+<a href="#" class="navItem">Business</a>
+<a href="#" class="navItem">Special Features</a>
+</div>
+</div>
+</div>
+<!-- END NAV BAR -->
 
-   
-    <div class="cell large-3 medium-4 small-12 bigbox-1">
-      <p>This is a 3 column cell on large screens, 4 columns on medium screens, and 12 columns on small screens.</p>
-    </div>
-    <div class="cell large-3 medium-4 small-12 bigbox-2">
-      <p>This is a 3 column cell on large screens, 4 columns on medium screens, and 12 columns on small screens.</p>
-    </div>
-    <div class="cell large-2 medium-4 small-12 bigbox-3">
-      <p>This is a 2 column cell on large screens, 4 columns on medium screens, and 12 columns on small screens.</p>
-    </div>
-    <div class="cell large-2 medium-4 small-12 bigbox-4">
-      <p>This is a 2 column cell on large screens, 4 columns on medium screens, and 12 columns on small screens.</p>
-    </div>
-    <div class="cell large-2 medium-4 small-12 bigbox-5">
-      <p>This is a 2 column cell on large screens, 4 columns on medium screens, and 12 columns on small screens.</p>
-    </div>
-  </div>
+<!-- BODY COPY -->
+<div class="grid-container">
 
+
+
+
+<p class="rtt"><a href="#top">Return to Top</a></p>
+
+
+
+
+</div>
+</div>
+<!-- END BODY COPY -->
+
+<!-- FOOTER BAR -->
+<!-- NAV BAR -->
+<div class="grid-container fluid footerStyle">
+<div class="grid-x grid-padding-x">
+<div class="large-12 cell">
+<p>&copy; 2023 The National Herald</p>
+</div>
+</div>
+</div>
+<!-- END NAV BAR -->
+
+<script src="js/vendor/jquery.js"></script>
+<script src="js/vendor/what-input.js"></script>
+<script src="js/vendor/foundation.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
