--- a/lion.html
+++ b/lion.html
@@ -116,8 +116,9 @@
 
     <!-- Featured Image -->
     <div class="featured-image">
-        <img src="/AG7/images/extinction-lion-nature.jpg" alt="A lion in the savannah at sunset">
-    </div>
+    <img src="images/extinction-lion-nature.jpg" alt="A lion in the savannah at sunset">
+</div>
+   
 
     <!-- Main Content Section -->
     <div class="container">
@@ -144,7 +145,10 @@
             <section>
                 <h3>The Threat of Poaching</h3>
                 <p>Poaching and trophy hunting further compound the species’ struggles. While trophy hunting is regulated in some countries, critics argue it disproportionately targets dominant male lions, destabilizing prides and reducing genetic diversity.</p>
-                <img src="/AG7/images/lion_3_90258bd4-5412-4cf9-bdd6-a21dfd562830.jpg" alt="Lion killed by poaching">
+               <section>
+    <h3>The Threat of Poaching</h3>
+    <img src="images/lion_3_90258bd4-5412-4cf9-bdd6-a21dfd562830.jpg" alt="Lion killed by poaching">
+</section>
                 <p>Meanwhile, the demand for lion bones in traditional Asian medicine has surged, replacing tiger bones as a key ingredient. TRAFFIC, a wildlife trade monitoring network, reported a 50% increase in the lion bone trade between 2018 and 2023, largely fueled by South African captive lion farms.</p>
             </section>
 
@@ -162,8 +166,8 @@
             <section>
                 <h3>Efforts to Save the African Lion</h3>
                 <p>Conservationists are racing against time to reverse the decline, though current efforts remain insufficient. Expanding national parks and reserves could provide lions with the safe habitats they need. In Tanzania, the Serengeti ecosystem restoration project aims to reconnect fragmented habitats, allowing lions to roam freely in search of prey and mates.</p>
-                <div style="text-align: center;">
-   <img src="/AG7/images/P1011020.JPG" alt="Lion in the Serengeti National park"> style="max-width: 50%; display: block; margin: 10px auto;">
+       <div style="text-align: center;">
+    <img src="images/P1011020.JPG" alt="Lion in the Serengeti National park" style="max-width: 50%; display: block; margin: 10px auto;">
     <p style="text-align: center; font-size: 0.9rem; color: #555; margin-top: 5px;">Photo credit: Lysandre Chaabi</p>
 </div>
                 <p>Addressing human-lion conflicts is another critical step. In Kenya, the Lion Guardians program collaborates with Maasai communities to track lion movements and protect livestock with predator-proof enclosures. Compensation schemes for farmers whose livestock is lost to lions have also proven effective.</p>
@@ -177,7 +181,5 @@
                     <footer class="footer">
     <p>&copy; 2024 <a href="https://lysandre7.github.io/AG7/portfolio.html" target="_blank">Lysandre Chaabi</a>. All Rights Reserved.</p>
 </footer>
-
-
 
 
