--- a/lion.html
+++ b/lion.html
@@ -147,7 +147,7 @@
                 <p>Poaching and trophy hunting further compound the species’ struggles. While trophy hunting is regulated in some countries, critics argue it disproportionately targets dominant male lions, destabilizing prides and reducing genetic diversity.</p>
                <section>
     <h3>The Threat of Poaching</h3>
-    <img src="/images/images2.jpg" alt="Lion killed by poaching">
+    <img src="/images/deadlion.jpg" alt="Lion killed by poaching">
 </section>
                 <p>Meanwhile, the demand for lion bones in traditional Asian medicine has surged, replacing tiger bones as a key ingredient. TRAFFIC, a wildlife trade monitoring network, reported a 50% increase in the lion bone trade between 2018 and 2023, largely fueled by South African captive lion farms.</p>
             </section>
