--- a/lion.html
+++ b/lion.html
@@ -109,7 +109,7 @@
 <body>
     <!-- Header Section -->
     <header class="banner">
-        <h1>The African Lion: A Race Against Extinction</h1>
+        <h1>The African Lion: A Race Against Extinction TEST</h1>
         <h2>Facing Habitat Loss, Poaching, and Climate Change</h2>
         <p><em>By Lysandre Chaabi</em></p>
     </header>
