--- a/lion.html
+++ b/lion.html
@@ -116,7 +116,7 @@
 
     <!-- Featured Image -->
     <div class="featured-image">
-    <img src="/images/extinction-lion-nature.jpg" alt="A lion in the savannah at sunset">
+    <img src="../AG7/images/extinction-lion-nature.jpg" alt="A lion in the savannah at sunset">
 </div>
    
 
