--- a/lion.html
+++ b/lion.html
@@ -147,7 +147,7 @@
                 <p>Poaching and trophy hunting further compound the species’ struggles. While trophy hunting is regulated in some countries, critics argue it disproportionately targets dominant male lions, destabilizing prides and reducing genetic diversity.</p>
                <section>
     <h3>The Threat of Poaching</h3>
-    <img src="/images/deadlion.jpg" alt="Lion killed by poaching">
+    <img src="../AG7/images/deadlion.jpg" alt="Lion killed by poaching">
 </section>
                 <p>Meanwhile, the demand for lion bones in traditional Asian medicine has surged, replacing tiger bones as a key ingredient. TRAFFIC, a wildlife trade monitoring network, reported a 50% increase in the lion bone trade between 2018 and 2023, largely fueled by South African captive lion farms.</p>
             </section>
@@ -167,7 +167,7 @@
                 <h3>Efforts to Save the African Lion</h3>
                 <p>Conservationists are racing against time to reverse the decline, though current efforts remain insufficient. Expanding national parks and reserves could provide lions with the safe habitats they need. In Tanzania, the Serengeti ecosystem restoration project aims to reconnect fragmented habitats, allowing lions to roam freely in search of prey and mates.</p>
        <div style="text-align: center;">
-    <img src="/images/alonelion.jpg" alt="Lion in the Serengeti National park">
+    <img src="../AG7/images/alonelion.jpg" alt="Lion in the Serengeti National park">
     <p style="text-align: center; font-size: 0.9rem; color: #555; margin-top: 5px;">Photo credit: Lysandre Chaabi</p>
 </div>
                 <p>Addressing human-lion conflicts is another critical step. In Kenya, the Lion Guardians program collaborates with Maasai communities to track lion movements and protect livestock with predator-proof enclosures. Compensation schemes for farmers whose livestock is lost to lions have also proven effective.</p>
