--- a/lion.html
+++ b/lion.html
@@ -6,6 +6,26 @@
     <title>The African Lion: A Race Against Extinction</title>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
     <style>
+        <!-- HTML Meta Tags -->
+<title>The African Lion: A Race Against Extinction</title>
+<meta name="description" content="">
+
+<!-- Facebook Meta Tags -->
+<meta property="og:url" content="https://lysandre7.github.io/AG7/lion.html">
+<meta property="og:type" content="website">
+<meta property="og:title" content="The African Lion: A Race Against Extinction">
+<meta property="og:description" content="">
+<meta property="og:image" content="">
+
+<!-- Twitter Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta property="twitter:domain" content="lysandre7.github.io">
+<meta property="twitter:url" content="https://lysandre7.github.io/AG7/lion.html">
+<meta name="twitter:title" content="The African Lion: A Race Against Extinction">
+<meta name="twitter:description" content="">
+<meta name="twitter:image" content="">
+
+
         body {
             font-family: 'Raleway', sans-serif;
             margin: 0;
