--- a/index.html
+++ b/index.html
@@ -1,94 +1,25 @@
 <!doctype html>
-<html class="no-js" lang="en" dir="ltr">
+
+<html lang="en">
+
 <head>
-<meta charset="utf-8">
-<meta http-equiv="x-ua-compatible" content="ie=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Headline Headline Headline | The National Herald</title>
-<link rel="stylesheet" href="css/foundation.css">
-<link rel="stylesheet" href="css/app.css">
+  <meta charset="utf-8">
+  <title>Insert Your Page Title Here</title>
+  <meta name="description" content="This is the description that search engines will display. Aim for 145-155 characters.">
+  <meta name="author" content="Insert the content author or owner name here">
 
+  <!-- Link to your JS file -->
+  <script src="scripts/script.js"></script>
 
-<!-- FILL OUT META TAGS! -->
-<meta name="description" content="">
-<meta name="author" content="The National Herald">
+  <!-- Link to your CSS file -->
+  <link rel="stylesheet" href="css/style.css">
 
-<!--TWITTER SUMMARY CARD-->
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="Headline Headline Headline">
-
-<!--OPEN GRAPH CARD-->
-<meta property="og:title" content="Headline Headline Headline">
-<meta property="og:site_name" content="The National Herald">
-<meta property="og:url" content="TBD">
-<meta property="og:description" content="Lead Graph Goes Here.">
-<meta property="og:type" content="website">
-<meta property="og:image" content="TBD">
+  <iframe frameborder="0" class="juxtapose" width="100%" height="512" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=c7a56d1e-b74f-11ef-9397-d93975fe8866"></iframe>
 
 </head>
+
+
 <body>
-
-<!-- RETURN TO TOP -->
-<a name="top"></a>
-<!-- END RETURN TO TOP -->
-
-<!-- SITE BRANDING -->
-<div class="grid-container">
-<div class="grid-x grid-padding-x">
-<div class="large-12 cell">
-
-
-</div>
-</div>
-</div>
-<!-- END SITE BRANDING -->
-
-<!-- NAV BAR -->
-<div class="grid-container fluid navStyle">
-<div class="grid-x grid-padding-x">
-<div class="large-12 cell">
-<a href="#" class="navItem">Home</a>
-<a href="#" class="navItem">National</a>
-<a href="#" class="navItem">International</a>
-<a href="#" class="navItem">Local</a>
-<a href="#" class="navItem">Lifestyle</a>
-<a href="#" class="navItem">Sports</a>
-<a href="#" class="navItem">Business</a>
-<a href="#" class="navItem">Special Features</a>
-</div>
-</div>
-</div>
-<!-- END NAV BAR -->
-
-<!-- BODY COPY -->
-<div class="grid-container">
-
-
-
-
-<p class="rtt"><a href="#top">Return to Top</a></p>
-
-
-
-
-</div>
-</div>
-<!-- END BODY COPY -->
-
-<!-- FOOTER BAR -->
-<!-- NAV BAR -->
-<div class="grid-container fluid footerStyle">
-<div class="grid-x grid-padding-x">
-<div class="large-12 cell">
-<p>&copy; 2023 The National Herald</p>
-</div>
-</div>
-</div>
-<!-- END NAV BAR -->
-
-<script src="js/vendor/jquery.js"></script>
-<script src="js/vendor/what-input.js"></script>
-<script src="js/vendor/foundation.js"></script>
-<script src="js/app.js"></script>
 </body>
+
 </html>
